# ProjectX

./: .gitignore  CLAUDE.md  README.md
backend/interview_engine/: .env.example  .gitignore  AGENTS.md  Dockerfile  agent.py  config.py  context_loader.py  models.py  nexus_client.py  output_parser.py  prompt_builder.py  pyproject.toml  state_machine.py
backend/interview_engine/agents/: __init__.py  interviewer.py
backend/interview_engine/fixtures/: sample_session.json
backend/interview_engine/prompts/: interviewer.txt
backend/interview_engine/tests/: test_graceful_close.py  test_nexus_client.py  test_progress_attributes.py
backend/nexus/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.vision  README.md  alembic.ini  docker-compose.livekit.yml  docker-compose.yml  livekit.toml  pyproject.toml  redis.conf
backend/nexus/app/: brokers.py  config.py  database.py  main.py  model_registry.py  models.py  pdf_worker.py  pubsub.py  vision_worker.py  worker.py
backend/nexus/app/ai/: __init__.py  client.py  config.py  otel.py  prompts.py  realtime.py  schemas.py  tracing.py
backend/nexus/app/cli/: ats_tick.py
backend/nexus/app/middleware/: auth.py  tenant.py
backend/nexus/app/migrations_support/: __init__.py  followups_backfill.py
backend/nexus/app/storage/: __init__.py  base.py  s3.py
backend/nexus/config/livekit/: egress.yaml  livekit.yaml
backend/nexus/docs/onboarding/: engine-redesign-phase-2-e2e.md
backend/nexus/docs/security/: threat-model.md
backend/nexus/migrations/: env.py
backend/nexus/migrations/rollback/: 0016_rollback.sql
backend/nexus/migrations/versions/: 0001_phase_2b_columns.py  0002_add_updated_by_to_job_postings.py  0003_signal_schema_v2.py  0004_pipeline_builder.py  0005_simplify_signal_filter.py  0006_question_banks.py  0007_add_coverage_notes.py  0008_audit_log_tenant_insert.py  0009_phase1_rls_full_command.py  0010_create_nexus_app_role.py  0011_rls_null_safe_current_tenant.py  0012_rename_service_role_bypass.py  0013_candidates_core.py  0014_sessions_scheduler_core.py  0015_pipeline_stage_v4.py  0016_stage_v5_participants.py  0017_stage_questions_updated_at_trigger.py  0018_pipeline_versioning_and_pause.py  0019_relax_io_stage_columns.py  0020_drop_workspace_mode.py  0021_add_clients_blocked_at.py  0022_users_partial_unique_auth.py  0023_tenant_hard_delete_cascade.py  0024_interview_engine_integration.py  0025_drop_engine_dispatch_tables.py  0026_question_kind_column.py  0027_tenant_settings.py  0028_audio_tuning_summary.py  0029_engine_checkpoint.py  0030_default_close_polite.py  0031_ats_core.py  0032_ats_job_status_filter_and_progress.py  0033_job_postings_org_unit_nullable.py  0035_completion_status_default_pending.py  0036_ats_unified_sync.py  0037_drop_blocked_pending_client_setup.py  0038_advance_signals_confirmed_to_pipeline_built.py  0039_session_error_code_check.py  0040_bank_generation_status_by_kind.py  0041_extracted_keyterms.py  (+22 more)
backend/nexus/prompts/v1/: jd_enhancement.txt  jd_enrichment.txt  jd_reenrichment.txt  jd_signal_extraction.txt  question_bank_ai_interview.txt  question_bank_ai_screening.txt  question_bank_ai_screening_behavioral.txt  question_bank_common.txt  question_bank_human_interview.txt  question_bank_keyterms.txt  question_bank_panel_interview.txt  question_bank_phone_screen.txt  question_bank_regenerate_one.txt  question_bank_take_home.txt  question_create_single.txt  question_refine_single.txt
backend/nexus/prompts/v2/: jd_signal_extraction.txt  question_bank_ai_screening.txt  question_bank_ai_screening_behavioral.txt  question_bank_common.txt  question_bank_phone_screen.txt  question_bank_regenerate_one.txt
backend/nexus/prompts/v3/: question_bank_ai_screening.txt  question_bank_common.txt  question_bank_critic.txt  question_bank_phone_screen.txt
backend/nexus/scripts/: export_job_agent_context.py  grep_naturalness.sh  reset-db.sh  run_engine_dry.py  speak_one_off.py  vision_timing.py
backend/nexus/scripts/scenarios/: knockout_close.yaml  prompt_injection.yaml  quick_smoke.yaml
backend/nexus/tests/: conftest.py  test_accept_invite.py  test_admin_hard_delete.py  test_ai_client.py  test_ai_config.py  test_ai_schemas.py  test_ai_tracing.py  test_audio_hints.py  test_audit.py  test_auth_admin_supabase.py  test_auth_endpoints.py  test_auth_login.py  test_auth_service.py  test_candidate_jwt.py  test_candidate_reference_photo.py  test_candidates_authz.py  test_candidates_errors.py  test_candidates_integration.py  test_candidates_resume.py  test_candidates_rls.py  test_candidates_router.py  test_candidates_schemas.py  test_candidates_service.py  test_candidates_sources.py  test_candidates_stage_transitions.py  test_company_profile_schema.py  test_config_probe_cap.py  test_config_share_secret.py  test_config_validators.py  test_database.py  test_deactivation.py  test_engine_settings.py  test_engine_tokens_rls.py  test_find_company_profile_in_ancestry.py  test_has_permission_in_unit_ancestry.py  test_health.py  test_inheritance_walks.py  test_interview_runtime_authz.py  test_interview_runtime_config.py  test_interview_runtime_knockout_failure.py  (+95 more)
backend/nexus/tests/ai/: test_realtime_factories.py  test_schemas.py
backend/nexus/tests/cli/: test_ats_tick.py
backend/nexus/tests/fixtures/: company_profile_enums.json
backend/nexus/tests/interview_engine/: conftest.py  test_agent_intro.py  test_audio_metrics.py  test_audio_tuning_summary.py  test_audit.py  test_audit_events.py  test_bank_resolver.py  test_brain_decision.py  test_brain_floor.py  test_brain_input_builder.py  test_brain_policy.py  test_brain_service.py  test_brain_setup_attach.py  test_config.py  test_continuation_watcher.py  test_controller.py  test_coverage.py  test_directive.py  test_directive_no_leak.py  test_engine_event_kinds.py  test_engine_event_log_settings.py  test_engine_otel_bootstrap.py  test_entrypoint_failure.py  test_event_kinds.py  test_event_log.py  test_event_log_factory.py  test_event_log_local_sink.py  test_event_log_redaction.py  test_event_log_sink.py  test_graceful_close.py  (+36 more)
(+1879 files in other folders)
