[project]
name = "interview-engine"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[silero,turn-detector]>=1.5.4",
    "livekit-plugins-ai-coustics>=0.2.7",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-deepgram>=1.5.4",
    "livekit-plugins-openai>=1.5.4",
    "livekit-plugins-cartesia>=1.5.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.2",
    "structlog>=24.0",
    "httpx>=0.27",
    "nexus @ file:///app/nexus",
]
