[project]
name = "nexus"
version = "0.1.0"
description = "ProjectX backend — AI video interview platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",

    # Data validation & settings
    "pydantic[email]>=2.10,<3",
    "pydantic-settings>=2.7,<3",

    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",

    # Task queue
    "dramatiq[redis]>=1.17,<2",

    # Redis (session state, cache)
    "redis>=5.2,<6",

    # Fast JSON serialization (pub/sub envelopes)
    "orjson>=3.10,<4",

    # Auth
    "PyJWT[crypto]>=2.10,<3",

    # HTTP client (ATS adapters, external APIs)
    "httpx>=0.28,<1",

    # AWS (S3 — candidate resumes, future Egress recordings)
    "boto3>=1.35,<2",

    # Email (MVP provider)
    "resend>=2.0,<3",

    # Template rendering (email templates)
    "jinja2>=3.1,<4",

    # Logging & observability
    "structlog>=24.4,<25",
    "sentry-sdk[fastapi]>=2.19,<3",
    # OTel core. Pinned to the 1.37 / 0.58b0 line because that's what
    # opentelemetry-instrumentation-openai-v2 2.3b0 transitively requires
    # (api~=1.37, instrumentation~=0.58b0, wrapt<2). Pinning explicitly so a
    # transitive resolver doesn't drift forward into incompatible 0.62b+ /
    # wrapt 2.x territory (the wrap_function_wrapper signature changed
    # between wrapt 1.x and 2.x, breaking the OpenAI instrumentor).
    "opentelemetry-api>=1.37,<2",
    "opentelemetry-sdk>=1.37,<2",
    "opentelemetry-exporter-otlp>=1.37,<2",
    "opentelemetry-instrumentation-fastapi>=0.58b0,<0.59",
    "opentelemetry-instrumentation-openai-v2>=2.3b0,<3",
    "wrapt>=1.17,<2",

    # --- Real-time video infrastructure (Phase 3C.2) ---
    "livekit-api>=1.0,<2",

    # --- AI provider (Phase 2A) ---
    "openai>=1.60,<2",
    "instructor>=1.7,<2",
    "sse-starlette>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
    "httpx",           # TestClient transport
    "ruff>=0.8,<1",
    "mypy>=1.14,<2",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
