[project]
name = "nexus"
version = "0.1.0"
description = "ProjectX backend — AI video interview platform"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.136,<1",
    "uvicorn[standard]>=0.46,<1",

    # Data validation & settings
    "pydantic[email]>=2.13,<3",
    "pydantic-settings>=2.14,<3",

    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.31,<1",
    "alembic>=1.18,<2",

    # Task queue
    "dramatiq[redis]>=1.18,<2",

    # Scheduler (stuck-session reaper). Pin to 3.x — 4.x is a major rewrite
    # still in beta and has breaking API changes.
    "apscheduler>=3.10,<4",

    # Redis (session state, cache)
    "redis>=5.3,<6",

    # Fast JSON serialization (pub/sub envelopes)
    "orjson>=3.11,<4",

    # Auth
    "PyJWT[crypto]>=2.12,<3",

    # HTTP client (ATS adapters, external APIs)
    "httpx>=0.28,<1",

    # AWS (S3 — candidate resumes, future Egress recordings)
    "boto3>=1.43,<2",

    # Email (MVP provider)
    "resend>=2.29,<3",

    # Template rendering (email templates)
    "jinja2>=3.1,<4",

    # Logging & observability.
    # structlog 24 → 25 is the only cross-major bump in Phase 5; allowed
    # under "current major" rule and called out explicitly per spec line 667.
    "structlog>=25.5,<26",
    "sentry-sdk[fastapi]>=2.58,<3",
    # OTel core. Phase 3 lifted these from the 1.37 / 0.58b0 line because
    # livekit-agents>=1.5.4 (absorbed into nexus when the engine merged)
    # requires opentelemetry-api>=1.39.0,<1.40.dev0. The Phase 1 auto-instrumentor
    # `opentelemetry-instrumentation-openai-v2` was incompatible with that
    # constraint and has been replaced by explicit
    # `tracer.start_as_current_span("openai.chat.completions.create")`
    # wrappers at every chat.completions.create call site (see
    # app/modules/jd/actors.py + app/modules/question_bank/actors.py).
    # instrumentation-fastapi 0.60b0/0.60b1 pairs with semantic-conventions
    # 0.60b0/0.60b1 which requires api==1.39.0 or 1.39.1 respectively —
    # both within livekit-agents' api<1.40.dev0 constraint.
    "opentelemetry-api>=1.39,<1.40.dev0",
    "opentelemetry-sdk>=1.39,<1.40.dev0",
    "opentelemetry-exporter-otlp>=1.39,<1.40.dev0",
    "opentelemetry-instrumentation-fastapi>=0.60b0,<0.61",

    # --- Real-time video infrastructure (Phase 3C.2 + Phase 3 engine merge) ---
    "livekit-api>=1.0,<2",
    # livekit-agents and plugins. Bringing the engine into nexus on a single
    # venv (Phase 3 of the modular-monolith spec) absorbs the engine's deps
    # here. Pin versions inherited from the (about-to-be-deleted)
    # backend/interview_engine/pyproject.toml — they're already verified
    # against openai 2.x via Phase 2.
    "livekit-agents[turn-detector]>=1.5.4,<2",
    "livekit-plugins-openai>=1.5.4,<2",
    "livekit-plugins-deepgram>=1.5.4,<2",
    "livekit-plugins-cartesia>=1.5.4,<2",
    "livekit-plugins-sarvam>=1.5.4,<2",
    "livekit-plugins-silero>=1.5.4,<2",

    # --- AI provider (Phase 2A) ---
    # openai 2.x: livekit-agents>=1.5.4 requires openai>=2; instructor>=1.15
    # transitively requires openai<3,>=2. Class names + chat.completions.create
    # signature are unchanged from 1.x — see docs/superpowers/plans/2026-05-01-phase-2*.md.
    "openai>=2.10,<3",
    # instructor 1.15.x is the floor that requires openai>=2. There is no
    # instructor 2.x release; stay <2.
    "instructor>=1.15,<2",
    "sse-starlette>=2.4,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=0.26,<1",
    "pytest-cov>=6.3,<7",
    "httpx",           # TestClient transport
    "ruff>=0.15,<1",
    "mypy>=1.20,<2",
]
# ONNX gaze inference — vision worker only. No torch; far lighter image.
# GPU-first: onnxruntime-gpu (CUDA 12 + cuDNN 9) runs the gaze model AND
# RetinaFace on the GPU when present, with automatic CPU fallback (see
# vision_onnx_providers). `uniface[gpu]` pulls onnxruntime-gpu (NOT the CPU
# onnxruntime) so the two never coexist — installing both breaks the
# `onnxruntime` module. Image base must provide CUDA+cuDNN (Dockerfile.vision).
vision = [
    "onnxruntime-gpu>=1.19,<1.24",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "uniface[gpu]>=0.1",
]
# Test-only deps for running the vision_integration suite INSIDE the vision
# image (which installs .[vision], not .[dev]). Kept out of the `vision` group
# so the production vision worker image stays lean. Install ephemerally in a
# throwaway container — see the canonical command in the perf plan / spec.
vision-test = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=0.26,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "prompt_quality: opt-in eval suite that hits the real OpenAI API; run with `pytest -m prompt_quality`",
    "vision_integration: requires the vision image (ffmpeg + numpy + onnxruntime)",
]
addopts = "-m 'not prompt_quality'"
